# Hacking

./: LDAPi.py  LICENSE  NOSQL.py  Nosqli.py  Password.py  README.md  SQli_techniques  SQli_techniques.py  asm.s  asm.txt  asm2.s  format.txt  libIRC.py  rsatool.py  shell.c  testop.c
2fa/: README.md
2fa_opsec/: README.md  backup.md  mpv.conf  user-overrides.js
active_directory/: README.md  README.md.save  README.md.save.1
attack_defense/: README.md
audit_code/: README.md
books/: README.md
certif_entretien/: README.md
certif_interview/: README.md  scrap.py
cloud_iam/: README.md
crypto/: Modern Cryptanalysis v1.1 2022-01-23.pdf.REMOVED.git-id  README.md  README.md.save  XOR.py  break_rand.c
ctf/: README.md
devops/: Kubernetes - Up and Running - Dive Into the Future of Infrastructure.pdf.REMOVED.git-id  README.md  docker-compose.yml
devops-selfhost/: README.md
doc_pentest/: README.md
forensic/: Dockerfile  README.md  docker_vol2_profile.sh  dwarf_output_format.py  vol-install.sh
hardware/: Bash-Bunny_ebook_v22.03.pdf.REMOVED.git-id  Format_hardware.pdf.REMOVED.git-id  Key-Croc_ebook_v22.03.pdf.REMOVED.git-id  MiniPC.circ  MiniPc_Sol.circ  Packet-Squirrel_ebook_v23.07.pdf.REMOVED.git-id  PyDuck-1.2.2-Linux.zip.REMOVED.git-id  README.md  Shark-Jack_ebook_v22.03.pdf.REMOVED.git-id  USB-Rubber-Ducky_ebook_v22.08-2.pdf.REMOVED.git-id  screamer.pdf.REMOVED.git-id  (+2 more)
prog/c++/c++11/shape_templated_c++11/: CMakeLists.txt  README.md  build.sh
prog/c++/c++11/shape_templated_c++11/headers/: circle.hpp
prog/c++/c++11/shape_templated_c++11/src/: main.cpp
(+505 files in other folders)
